[Setup] Fix javadocs tags